<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/device_category">

        <Preference
            app:key="versions"
            app:summary="Mock content"
            app:title="@string/version_information" />

        <!--suppress AndroidElementNotAllowed -->
        <co.sodalabs.apkupdater.feature.adminui.SecureStringEditTextPreference
            app:key="admin_passcode"
            app:summary="@string/admin_passcode_desc"
            app:title="@string/admin_passcode" />

        <!--suppress AndroidElementNotAllowed -->
        <co.sodalabs.apkupdater.feature.adminui.SecureStringEditTextPreference
            app:key="device_id"
            app:summary="@string/device_id_desc"
            app:title="@string/device_id" />

        <EditTextPreference
            app:key="co.sodalabs.mock_firmware_version"
            app:summary="device_mock_firmware_version_desc"
            app:title="@string/device_mock_firmware_version" />

        <EditTextPreference
            app:key="co.sodalabs.mock_sparkpoint_version"
            app:summary="@string/device_mock_sparkpoint_version_desc"
            app:title="@string/device_mock_sparkpoint_version" />

        <ListPreference
            app:key="co.sodalabs.api_base_url"
            app:summary="@string/server_url_desc"
            app:title="@string/server_url" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/heartbeat_category">

        <!--suppress AndroidElementNotAllowed -->
        <co.sodalabs.apkupdater.feature.adminui.LongEditTextPreference
            app:key="co.sodalabs.heartbeat_interval"
            app:summary="@string/heartbeat_interval_desc"
            app:title="@string/heartbeat_interval" />

        <Preference
            app:enabled="false"
            app:key="heartbeat_watcher" />

        <Preference
            app:icon="@drawable/bt_heartbeat"
            app:key="send_heartbeat_now"
            app:title="@string/test_heartbeat" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/check_category">

        <ListPreference
            app:defaultValue="Stable"
            app:key="co.sodalabs.update_channel"
            app:summary="@string/update_channel_desc"
            app:title="@string/update_channel" />

        <!--suppress AndroidElementNotAllowed -->
        <co.sodalabs.apkupdater.feature.adminui.LongEditTextPreference
            app:key="co.sodalabs.check_interval"
            app:summary="@string/check_interval_desc"
            app:title="@string/check_interval" />

        <Preference
            app:icon="@drawable/bt_check"
            app:key="check_test_app_now"
            app:title="@string/check_for_updates" />

        <Preference
            app:key="check_status"
            app:summary="Idle" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/download_category">

        <SwitchPreference
            app:key="co.sodalabs.download_use_cache"
            app:title="@string/download_use_cache" />

        <!--suppress AndroidElementNotAllowed -->
        <co.sodalabs.apkupdater.feature.adminui.IntEditTextPreference
            app:key="co.sodalabs.download_cache_max_size"
            app:summary="@string/download_cache_max_size_desc"
            app:title="@string/download_cache_max_size" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/install_category">

        <!--suppress AndroidElementNotAllowed -->
        <co.sodalabs.apkupdater.feature.adminui.IntEditTextPreference
            app:key="co.sodalabs.install_hour_begin"
            app:summary="@string/install_hour_start_desc"
            app:title="@string/install_hour_start" />

        <!--suppress AndroidElementNotAllowed -->
        <co.sodalabs.apkupdater.feature.adminui.IntEditTextPreference
            app:key="co.sodalabs.install_hour_end"
            app:summary="@string/install_hour_end_desc"
            app:title="@string/install_hour_end" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="co.sodalabs.install_force_full_firmware_update"
            app:summary="@string/enable_full_firmware_update_desc"
            app:title="@string/enable_full_firmware_update" />

        <SwitchPreference
            app:key="co.sodalabs.install_allow_app_downgrade"
            app:title="@string/install_allow_app_downgrade" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/network_category">

        <!--suppress AndroidElementNotAllowed -->
        <co.sodalabs.apkupdater.feature.adminui.IntEditTextPreference
            app:key="co.sodalabs.network_connection_timeout"
            app:summary="@string/network_connection_timeout_desc"
            app:title="@string/network_connection_timeout" />

        <!--suppress AndroidElementNotAllowed -->
        <co.sodalabs.apkupdater.feature.adminui.IntEditTextPreference
            app:key="co.sodalabs.network_read_timeout"
            app:summary="@string/network_read_timeout_desc"
            app:title="@string/network_read_timeout" />

        <!--suppress AndroidElementNotAllowed -->
        <co.sodalabs.apkupdater.feature.adminui.IntEditTextPreference
            app:key="co.sodalabs.network_write_timeout"
            app:summary="@string/network_write_timeout_desc"
            app:title="@string/network_write_timeout" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_category">

        <!-- TODO: Use underscore as delimiter-->
        <Preference
            app:key="androidSettings"
            app:summary="@string/android_settings_desc"
            app:title="@string/android_settings" />

        <Preference
            app:key="home_intent"
            app:summary="@string/main_application_desc"
            app:title="@string/main_application" />

        <!-- TODO: Use underscore as delimiter-->
        <Preference
            app:key="speedTestApp"
            app:summary="@string/speed_test_desc"
            app:title="@string/speed_test" />

        <!-- TODO: Use underscore as delimiter-->
        <Preference
            app:key="sendLogs"
            app:summary="@string/send_logs_desc"
            app:title="@string/send_logs" />
    </PreferenceCategory>
</PreferenceScreen>